# MalPP

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Data.hpp  Environment.hpp  Reader.hpp  Tokenizer.hpp  core.hpp  eval.hpp  mal.hpp  printer.hpp  reader.hpp  readline.hpp  types.hpp
include/types/: False.hpp  Function.hpp  HashMap.hpp  Integer.hpp  Keyword.hpp  List.hpp  Nil.hpp  String.hpp  Symbol.hpp  True.hpp  Vector.hpp
src/: Data.cpp  Environment.cpp  Reader.cpp  Tokenizer.cpp  core.cpp  eval.cpp  main.cpp  mal.cpp  printer.cpp  reader.cpp  readline.cpp  types.cpp
src/types/: False.cpp  Function.cpp  HashMap.cpp  Integer.cpp  Keyword.cpp  List.cpp  Nil.cpp  String.cpp  Symbol.cpp  True.cpp  Vector.cpp
